# Twitter-App

./: .gitignore  README.md  app.py  requirements.txt
twitter-app/: package-lock.json  package.json
twitter-app/public/: index.html
twitter-app/src/: App.css  App.js
twitter-app/src/components/: FavoriteAccounts.css  FavoriteAccounts.js  Homepage.css  Homepage.js  NavBar.css  NavBar.js  RandomTweet.js  SearchPage.css  SearchPage.js  SearchTweet.js  WarningButton.js
twitter-react-app/public/: index.html
twitter-react-app/src/: index.css
twitter-react-app/src/components/: AccountSummaryCard.js  FavoriteAccounts.css  FavoriteAccounts.js  SearchPage.css  SearchPage.js  TweetCard.js
twitter_flask_app/: .env  .gitignore  app.py  pyproject.toml  requirement.txt
twitter_flask_app/env/: pyvenv.cfg
twitter_flask_app/env/Scripts/: activate  activate.bat
twitter_flask_app/twitter-react-app/: package-lock.json  package.json
twitter_flask_app/twitter-react-app/src/: App.js  index.js
twitter_flask_app/twitter-react-app/src/components/: AccountSummaryCard.js  FavoriteAccounts.js  NavBar.css  SearchPage.css  SearchPage.js
