[tool.poetry]
name = "twitter_flask_app"
version = "0.1.0"
description = ""
authors = ["Raymond Dang <raymondquocdang@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.13"
Flask = "^2.2.2"
requests = "^2.28.1"
Flask-Cors = "^3.0.10"
python-dotenv = "^0.20.0"
gunicorn = "^20.1.0"
boto = "^2.49.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
